# dockerized-ostis

./: .Dockerfile.swn  .editorconfig  .gitignore  Dockerfile  Dockerfile.clion-cpp-env  LICENSE  README.md  build_image.py  build_image.sh  run.py  run.sh  run_clion_debug.sh  stop_clion_debug.sh
clion_debug/: Dockerfile.clion-cpp-env  build_clion_debug_image.sh  build_image.sh  call_make_all.sh  run_clion_debug.sh  run_container.sh
config/: CMakeLists.txt  sc-web.ini
kb/: linguistics_knowledge_base.scs  section_subjdomain_ligaments_relations.scsi
kb/menu/: ui_main_menu.scs
kb/section_subjdomain_of_action_paradigm/: section_subjdomain_of_action_paradigm.scs  section_subjdomain_of_action_paradigm.scsi
kb/section_subjdomain_of_action_paradigm/examples/: absorb.scs  accumulate.scs  admonish.scs  adopt.scs  advertise.scs  approach.scs  (+106 more)
kb/section_subjdomain_of_grammatical_category/: section_subjdomain_of_gramm_category.scs  section_subjdomain_of_gramm_category.scsi
kb/section_subjdomain_of_languages/: section_subjdomain_of_languages.scs  section_subjdomain_of_languages.scsi
kb/section_subjdomain_of_natural_language_texts/: section_subjdomain_of_natural_language_texts.scs  section_subjdomain_of_natural_language_texts.scsi
kb/section_subjdomain_of_part_of_speech/: section_subjdomain_of_part_of_speech.scs  section_subjdomain_of_part_of_speech.scsi
kb/ui_menu/: ui_main_menu.scs  ui_menu_na_example_commands.scs  ui_start_sc_element.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/exampleModule/: CMakeLists.txt  README.md  exampleModule.cpp  exampleModule.hpp
problem-solver/cxx/exampleModule/agents/: SubdividingSearchAgent.cpp  SubdividingSearchAgent.hpp
problem-solver/cxx/exampleModule/keynodes/: keynodes.cpp  keynodes.hpp
problem-solver/cxx/exampleModule/specifications/agent_of_subdividing_search/: desc_agent_of_subdividing_search.md  lib_component_ui_menu_subdividing_search.scs  ui_menu_subdividing_search.scsi
scripts/: ostis  start_container.sh
windows_scripts/: build_image.ps1  run.ps1
(+231 files in other folders)
